# rcv

./: .gitignore  AGENTS.md  README.md  pyproject.toml
docs/: branching.md  commands.md  configuration.md
src/rcv/: __init__.py  cli.py
src/rcv/assets/latex/: preamble.tex
src/rcv/assets/typst/: resume_config.typ
src/rcv/commands/: __init__.py  archive.py  branch.py  build.py  completion.py  diff.py  init.py  list_cmd.py  new.py  tag.py  tree.py  watch.py
src/rcv/core/: __init__.py  config.py  resume.py
src/rcv/utils/: __init__.py  completion.py
